tests/NormalTests/paczka1/small_fuzzy/54697861.err
Error in line 7: tdCKygv S215 20,0
Error in line 4: OLNfb4 S768 32,0
Error in line 11: OLNfb4 S438 77,4
